[package]
name = "passman"
version = "0.1.0"
authors = ["mj <will@ponsonby.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.12.0"              # A library to build rich terminal user interfaces or dashboards 
termion = "1.5.6"                          # A bindless library for manipulating terminals.
rand = "0.8.3"              # Random number generators and other randomness functionality. 
